--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "A browser extension for simplifying the mod & helper workflow on Mojang's bug tracker Mojira",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "copylibs": "rm -rf lib && mkdir lib && cp -r node_modules/webextension-polyfill/dist/* ./lib",
+    "build": "npm run copylibs && web-ext build -o",
+    "lint": "npm run copylibs && web-ext lint --self-hosted"
   },
   "author": "violine1101",
   "license": "GPL-3.0",
   "devDependencies": {
+    "web-ext": "^4.2.0",
     "web-ext-types": "github:kelseasy/web-ext-types"
+  },
+  "dependencies": {
+    "webextension-polyfill": "^0.6.0"
   }
 }
