--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,7 @@
         "js": [
             "lib/browser-polyfill.min.js",
             "src/util/util.js",
-            "src/main.js"
+            "src/content.js"
         ]
     }],
 
