Validate user permissions again Fixes #64

--- a/manifest.json
+++ b/manifest.json
@@ -46,6 +46,7 @@
             "src/content/dropdown.js",
             "src/content/postpone.js",
             "src/content/sorting.js",
+            "src/content/permissionCheck.js",
             "src/content/content.js"
         ]
     }],
