--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "copylibs": "(rm -rf lib || rmdir /Q /S lib || echo>NUL) && mkdir lib && (cp -r node_modules/webextension-polyfill/dist/* ./lib || copy node_modules\\webextension-polyfill\\dist\\* .\\lib)",
     "build": "npm run copylibs && web-ext build -o",
-    "lint": "npm run copylibs && web-ext lint"
+    "lint": "npm run copylibs && web-ext lint --firefox-preview"
   },
   "author": "violine1101",
   "license": "GPL-3.0",
